--- a/openjdk/webrev/8168318/index.html
+++ b/openjdk/webrev/8168318/index.html
@@ -85,7 +85,7 @@ hr { border: none 0; border-top: 1px solid #aaa; height: 1px; }
 <div class="summary">
 <h2>Code Review for hotspot</h2>
 <table>
-<tr><th>Prepared by:</th><td>Igor Nunes  <igor.nunes@eldorado.org.br> on Mon Oct 24 15:58:42 BRST 2016</td></tr>
+<tr><th>Prepared by:</th><td>Igor Nunes  <igor.nunes@eldorado.org.br> on Mon Oct 24 16:25:58 BRST 2016</td></tr>
 <tr><th>Workspace:</th><td>/home/igor/hs-comp/hotspot</td></tr>
 <tr><th>Compare against:</th><td>
 http://hg.openjdk.java.net/jdk9/hs-comp/hotspot
@@ -96,7 +96,7 @@ http://hg.openjdk.java.net/jdk9/hs-comp/hotspot
 <tr><th>Changeset:</th><td>
 <a href="hotspot.changeset">hotspot.changeset</a></td></tr>
 <tr><th>Bug id:</th><td>
-<a href="https://bugs.openjdk.java.net/browse/JDK-8168318">JDK-8168318 : PPC64: Use cmpdi instead of li/cmpd</a>
+<a href="https://bugs.openjdk.java.net/browse/JDK-8168318">JDK-8168318 : PPC64: Use cmpldi instead of li/cmpld</a>
 </td></tr>
 <tr><th>Legend:</th><td>
 <b>Modified file</b><br><font color=red><b>Deleted file</b></font><br><font color=green><b>New file</b></font></td></tr>
@@ -114,7 +114,7 @@ http://hg.openjdk.java.net/jdk9/hs-comp/hotspot
 <a href="raw_files/new/src/cpu/ppc/vm/ppc.ad">Raw</a>
 </code>
 <b>src/cpu/ppc/vm/ppc.ad</b> 
-</p><blockquote><pre>rev <a href="https://bugs.openjdk.java.net/browse/JDK-12107">12107</a> : Implement cmpP_reg_null por ppc.ad</pre>
+</p><blockquote><pre>rev <a href="https://bugs.openjdk.java.net/browse/JDK-12107">12107</a> : PPC64: Use cmpldi instead of li/cmpld</pre>
 <!-- Add comments to explain changes in src/cpu/ppc/vm/ppc.ad here -->
 <span class="lineschanged">12 lines changed: 12 ins; 0 del; 0 mod; 13297 unchg</span>
 </blockquote>
