--- a/openjdk/webrev/8168318/src/cpu/ppc/vm/ppc.ad.sdiff.html
+++ b/openjdk/webrev/8168318/src/cpu/ppc/vm/ppc.ad.sdiff.html
@@ -82,7 +82,7 @@ hr { border: none 0; border-top: 1px solid #aaa; height: 1px; }
 <center>&lt prev <a href='../../../../index.html' target='_top'>index</a> next &gt</center>
 <h2>src/cpu/ppc/vm/ppc.ad</h2>
 <a class="print" href="javascript:print()">Print this page</a>
-<pre>rev <a href="https://bugs.openjdk.java.net/browse/JDK-12107">12107</a> : Implement cmpP_reg_null por ppc.ad</pre>
+<pre>rev <a href="https://bugs.openjdk.java.net/browse/JDK-12107">12107</a> : PPC64: Use cmpldi instead of li/cmpld</pre>
 
 <table><tr valign="top">
 <td><pre>
