--- a/openjdk/webrev/8168318/src/cpu/ppc/vm/ppc.ad.cdiff.html
+++ b/openjdk/webrev/8168318/src/cpu/ppc/vm/ppc.ad.cdiff.html
@@ -83,7 +83,9 @@ hr { border: none 0; border-top: 1px solid #aaa; height: 1px; }
 <center>&lt prev <a href='../../../../index.html' target='_top'>index</a> next &gt</center>
 <h2>src/cpu/ppc/vm/ppc.ad</h2>
         <a class="print" href="javascript:print()">Print this page</a>
-<pre>rev <a href="https://bugs.openjdk.java.net/browse/JDK-12107">12107</a> : PPC64: Use cmpldi instead of li/cmpld</pre>
+<pre>rev <a href="https://bugs.openjdk.java.net/browse/JDK-12107">12107</a> : <a href="https://bugs.openjdk.java.net/browse/JDK-8168318">8168318</a>: PPC64: Use cmpldi instead of li/cmpld
+
+Reviewed-by: goetz</pre>
         <pre>
 <hr /><span class="oldmarker">*** 11233,11242 ****</span>
 <span class="newmarker">--- 11233,11254 ----</span>
