--- a/openjdk/webrev/8168318/src/cpu/ppc/vm/ppc.ad.lhs.html
+++ b/openjdk/webrev/8168318/src/cpu/ppc/vm/ppc.ad.lhs.html
@@ -81,7 +81,9 @@ hr { border: none 0; border-top: 1px solid #aaa; height: 1px; }
     </head>
     <body id="SUNWwebrev" onkeypress="keypress(event);">
     <a name="0"></a>
-    <pre>rev <a href="https://bugs.openjdk.java.net/browse/JDK-12107">12107</a> : PPC64: Use cmpldi instead of li/cmpld</pre><hr></hr>
+    <pre>rev <a href="https://bugs.openjdk.java.net/browse/JDK-12107">12107</a> : <a href="https://bugs.openjdk.java.net/browse/JDK-8168318">8168318</a>: PPC64: Use cmpldi instead of li/cmpld
+
+Reviewed-by: goetz</pre><hr></hr>
 <pre>
    1 //
    2 // Copyright (c) 2011, 2016, Oracle and/or its affiliates. All rights reserved.
