Fix webrev for 8170328

--- a/openjdk/webrev/8170328/src/cpu/ppc/vm/ppc.ad.sdiff.html
+++ b/openjdk/webrev/8170328/src/cpu/ppc/vm/ppc.ad.sdiff.html
@@ -82,7 +82,9 @@ hr { border: none 0; border-top: 1px solid #aaa; height: 1px; }
 <center>&lt prev <a href='../../../../index.html' target='_top'>index</a> next &gt</center>
 <h2>src/cpu/ppc/vm/ppc.ad</h2>
 <a class="print" href="javascript:print()">Print this page</a>
-<pre></pre>
+<pre>rev <a href="https://bugs.openjdk.java.net/browse/JDK-12338">12338</a> : PPC64: Use andis instead of lis/and
+
+Add match rule to replace lis/and for an andis.</pre>
 
 <table><tr valign="top">
 <td><pre>
