--- a/openjdk/webrev/8170328/index.html
+++ b/openjdk/webrev/8170328/index.html
@@ -85,15 +85,16 @@ hr { border: none 0; border-top: 1px solid #aaa; height: 1px; }
 <div class="summary">
 <h2>Code Review for hotspot</h2>
 <table>
-<tr><th>Prepared by:</th><td>Igor Nunes  <igor.nunes@eldorado.org.br> on Thu Nov 24 17:54:25 BRST 2016</td></tr>
+<tr><th>Prepared by:</th><td>Igor Nunes  <igor.nunes@eldorado.org.br> on Thu Nov 24 18:07:17 BRST 2016</td></tr>
 <tr><th>Workspace:</th><td>/mnt/release/hs/hotspot</td></tr>
 <tr><th>Compare against:</th><td>
 http://hg.openjdk.java.net/jdk9/hs/hotspot
 </td></tr>
+<tr><th>Compare against version:</th><td>12337</td></tr>
 <tr><th>Summary of changes:</th><td>
 13 lines changed: 13 ins; 0 del; 0 mod; 13310 unchg</td></tr>
-<tr><th>Patch of changes:</th><td>
-<a href="hotspot.patch">hotspot.patch</a></td></tr>
+<tr><th>Changeset:</th><td>
+<a href="hotspot.changeset">hotspot.changeset</a></td></tr>
 <tr><th>Bug id:</th><td>
 <a href="https://bugs.openjdk.java.net/browse/JDK-8170328">JDK-8170328 : PPC64: Use andis instead of lis/and</a>
 </td></tr>
@@ -109,11 +110,14 @@ http://hg.openjdk.java.net/jdk9/hs/hotspot
 <a href="src/cpu/ppc/vm/ppc.ad.frames.html">Frames</a>
 <a href="src/cpu/ppc/vm/ppc.ad-.html">Old</a>
 <a href="src/cpu/ppc/vm/ppc.ad.html">New</a>
-<a href="src/cpu/ppc/vm/ppc.ad.patch">Patch</a>
+ -----
 <a href="raw_files/new/src/cpu/ppc/vm/ppc.ad">Raw</a>
 </code>
 <b>src/cpu/ppc/vm/ppc.ad</b> 
-</p><blockquote><!-- Add comments to explain changes in src/cpu/ppc/vm/ppc.ad here -->
+</p><blockquote><pre>rev <a href="https://bugs.openjdk.java.net/browse/JDK-12338">12338</a> : PPC64: Use andis instead of lis/and
+
+Add match rule to replace lis/and for an andis.</pre>
+<!-- Add comments to explain changes in src/cpu/ppc/vm/ppc.ad here -->
 <span class="lineschanged">13 lines changed: 13 ins; 0 del; 0 mod; 13310 unchg</span>
 </blockquote>
 
