Fix 8170328 second version-2

--- a/openjdk/webrev/8170328-01/index.html
+++ b/openjdk/webrev/8170328-01/index.html
@@ -85,7 +85,7 @@ hr { border: none 0; border-top: 1px solid #aaa; height: 1px; }
 <div class="summary">
 <h2>Code Review for hotspot</h2>
 <table>
-<tr><th>Prepared by:</th><td>Igor Nunes  <igor.nunes@eldorado.org.br> on Fri Nov 25 11:15:43 BRST 2016</td></tr>
+<tr><th>Prepared by:</th><td>Igor Nunes <igor.nunes@eldorado.org.br> on Fri Nov 25 13:27:30 BRST 2016</td></tr>
 <tr><th>Workspace:</th><td>/mnt/release/hs/hotspot</td></tr>
 <tr><th>Compare against:</th><td>
 http://hg.openjdk.java.net/jdk9/hs/hotspot
@@ -114,12 +114,7 @@ http://hg.openjdk.java.net/jdk9/hs/hotspot
 <a href="raw_files/new/src/cpu/ppc/vm/ppc.ad">Raw</a>
 </code>
 <b>src/cpu/ppc/vm/ppc.ad</b> 
-</p><blockquote><pre>rev <a href="https://bugs.openjdk.java.net/browse/JDK-12338">12338</a> : PPC64: Use andis instead of lis/and
-
-Add match rule to replace lis/and for an andis.
-rev <a href="https://bugs.openjdk.java.net/browse/JDK-12339">12339</a> : PPC64: Use andis instead of lis/and
-
-Fix unsigned short</pre>
+</p><blockquote><pre>rev <a href="https://bugs.openjdk.java.net/browse/JDK-12338">12338</a> : PPC64: Use andis instead of lis/and</pre>
 <!-- Add comments to explain changes in src/cpu/ppc/vm/ppc.ad here -->
 <span class="lineschanged">13 lines changed: 13 ins; 0 del; 0 mod; 13310 unchg</span>
 </blockquote>
