--- a/openjdk/webrev/8170328-01/src/cpu/ppc/vm/ppc.ad.sdiff.html
+++ b/openjdk/webrev/8170328-01/src/cpu/ppc/vm/ppc.ad.sdiff.html
@@ -82,12 +82,7 @@ hr { border: none 0; border-top: 1px solid #aaa; height: 1px; }
 <center>&lt prev <a href='../../../../index.html' target='_top'>index</a> next &gt</center>
 <h2>src/cpu/ppc/vm/ppc.ad</h2>
 <a class="print" href="javascript:print()">Print this page</a>
-<pre>rev <a href="https://bugs.openjdk.java.net/browse/JDK-12338">12338</a> : PPC64: Use andis instead of lis/and
-
-Add match rule to replace lis/and for an andis.
-rev <a href="https://bugs.openjdk.java.net/browse/JDK-12339">12339</a> : PPC64: Use andis instead of lis/and
-
-Fix unsigned short</pre>
+<pre>rev <a href="https://bugs.openjdk.java.net/browse/JDK-12338">12338</a> : PPC64: Use andis instead of lis/and</pre>
 
 <table><tr valign="top">
 <td><pre>
