--- a/openjdk/webrev/temp-patch-1/index.html
+++ b/openjdk/webrev/temp-patch-1/index.html
@@ -85,7 +85,7 @@ hr { border: none 0; border-top: 1px solid #aaa; height: 1px; }
 <div class="summary">
 <h2>Code Review for hotspot</h2>
 <table>
-<tr><th>Prepared by:</th><td>Gustavo Serra Scalet <gustavo.scalet@eldorado.org.br> on Tue Feb 21 13:27:07 BRT 2017</td></tr>
+<tr><th>Prepared by:</th><td>Igor Nunes <igor.nunes@eldorado.org.br> on Tue Feb 21 13:27:07 BRT 2017</td></tr>
 <tr><th>Workspace:</th><td>/home/igor/hs/hotspot</td></tr>
 <tr><th>Compare against:</th><td>
 http://hg.openjdk.java.net/jdk9/hs/hotspot
